<resources>
    <string name="app_name">ExitConfirmationsAndroid</string>
    <string name="login">להתחבר</string>
    <string name="login_to_acc">להתחבר לחשבון</string>
    <string name="email">א-מייל</string>
    <string name="password">סיסמה</string>
    <string name="username">שם</string>
    <string name="madrich">מדריך/ה</string>
    <string name="guard">שומר</string>
    <string name="accept">לאשר</string>
    <string name="going_to">יציאה ל</string>
    <string name="exit_time">זמן היציאה</string>
    <string name="exit_date">יום היציאה</string>
    <string name="return_date">יום החזרה</string>
    <string name="return_time">זמן החזרה</string>
    <string name="group">קבוצה</string>
    <string name="students_names">שמות החניכים</string>
    <string name="students_choosing">בחירת החניכים</string>
    <string name="continue_t">להמשיך</string>
    <string name="for_whom_permission">למי הפתק? </string>
    <string name="for_this_group">לתלמיד מקבוצה הזאת</string>
    <string name="for_other_group">לכל תלמיד</string>
    <string name="there_is_no_exit_permissions">אין אישורים בשבוע הזה</string>
    <string name="create_permission">ליצור פתק</string>
    <string name="show_qr_code">לפתוח קוד qr</string>
</resources>